--- a/registering.html
+++ b/registering.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registering Module Documentation</title>
-    <style>
+    <link rel="stylesheet" href="styles.css">
+    <!-- <style>
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
@@ -33,7 +34,7 @@
             border-radius: 5px;
             overflow-x: auto;
         }
-    </style>
+    </style> -->
 </head>
 <body>
     <h1>Registering Module Documentation</h1>
