--- a/evaluation_script.html
+++ b/evaluation_script.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Evaluation Script Documentation</title>
-    <style>
+    <link rel="stylesheet" href="styles.css">
+    <!-- <style>
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
@@ -29,7 +30,7 @@
             border-radius: 5px;
             overflow-x: auto;
         }
-    </style>
+    </style> -->
 </head>
 <body>
     <h1>Evaluation Script Documentation</h1>
